--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
-
-.red-text {
+	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
   font-size: 24px;
   color: red;
 }
@@ -289,13 +287,13 @@ window.trackDecision = function(decisionLabel) {
 [[No-&gt;Pain less than six months]]
 </tw-passagedata><tw-passagedata pid="3" name="Stop" tags="" position="925,800" size="100,100">I&#39;m sorry, this program does not seem applicable for you yet.
 
-If you wish to return to the previous page, press the back button on the sidebar. </tw-passagedata><tw-passagedata pid="4" name="Pain longer than six months" tags="" position="725,225" size="100,100">Have you seen a licensed medical doctor about this pain?
+If you wish to return to the previous page, press the back button on the sidebar. </tw-passagedata><tw-passagedata pid="4" name="Pain longer than six months" tags="" position="700,225" size="100,100">Have you seen a licensed medical doctor about this pain?
 
 [[Yes-&gt;I have seen a doctor]]
 
 [[No-&gt;I have not not seen a doctor]]</tw-passagedata><tw-passagedata pid="5" name="Pain less than six months" tags="" position="400,475" size="100,100">Our body generally needs about 3 to 6 months to physically heal. Given that your pain is less than six months, I recommend that you do not take this program and allow your body to heal.
 
-[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="6" name="I have seen a doctor" tags="" position="900,225" size="100,100">Is your diagnosis life threatening?
+[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="6" name="I have seen a doctor" tags="" position="875,200" size="100,100">Is your diagnosis life threatening?
 
 [[Yes-&gt;Diagnosis is life threatening]]
 
@@ -303,7 +301,7 @@ If you wish to return to the previous page, press the back button on the sidebar
 
 [[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="8" name="Diagnosis is life threatening" tags="" position="750,600" size="100,100">I do not recommend you take this program if your diagnosis is life-threatening. I recommend you follow the advice of your doctor to do whatever you need to do to come to a stable state.
 
-[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="9" name="My diagnosis is not life threatening" tags="A-list-of-things" position="1025,225" size="100,100">Is your pain diagnosis in one of the following locations?
+[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="9" name="My diagnosis is not life threatening" tags="A-list-of-things" position="1050,175" size="100,100">Is your pain diagnosis in one of the following locations?
 
 &lt;ul&gt;
   &lt;li&gt;Back&lt;/li&gt;
@@ -486,7 +484,7 @@ Such a study was done in the New England Journal of Medicine showing that &lt;i&
 [[Its hard for me to imagine that my MRI defect is a normal thing among the population-&gt;Stop]]</tw-passagedata><tw-passagedata pid="25" name="The doctors cannot find any physical issue that leads to the pain" tags="" position="2025,375" size="100,100">This is an excellent place to be, because this makes it easier to undertand that the pain is originating from stress and tension.
 
 
-[[Let&#39;s continue now to understanding the nature of stress and tension]]</tw-passagedata><tw-passagedata pid="26" name="I am open to the fact that my physical defect may not be causing the pain" tags="" position="2300,125" size="100,100">Excellent.
+[[Let&#39;s continue now to understanding the nature of stress and tension]]</tw-passagedata><tw-passagedata pid="26" name="I am open to the fact that my physical defect may not be causing the pain" tags="" position="2225,125" size="100,100">Excellent.
 
 It can be scary to see a scan with your defect on there. However, knowing that it&#39;s a normal occurence for many others not in pain can help you to relax and for you to know that your body is fine.
 
@@ -501,7 +499,7 @@ An interesting fact that is that radiologists have significant variability their
 &lt;/ul&gt;
 [[I have great resistance and disagreement with one or more of these statements-&gt;Stop]]
 
-[[I am skeptical but open to the possibility of these statements]]</tw-passagedata><tw-passagedata pid="28" name="I am skeptical but open to the possibility of these statements" tags="A-list-of-things" position="2350,325" size="100,100">Excellent.
+[[I am skeptical but open to the possibility of these statements]]</tw-passagedata><tw-passagedata pid="28" name="I am skeptical but open to the possibility of these statements" tags="A-list-of-things" position="2300,350" size="100,100">Excellent.
 We are at a good foundation to now start looking at stress and tension in our lives.
 
 The good news is that almost everyone experiences stress and tension. The reason it&#39;s good news is that we don&#39;t have to feel alone in our experience of stress and tension, it&#39;s just a normal fact of life.
@@ -1670,8 +1668,7 @@ Old Cover
 	I had previously been confused about having to change my personality traits, and your program reassured me that I don&#39;t have to do that.  The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		That is absolutely amazing.  I mentioned skin issues and to be honest, that has not improved yet, but I will keep going with the program...I understand it takes time.   I think I mentioned to you I had back pain and sciatica years ago, but I didn&#39;t mention that the sciatica comes back when I&#39;m stressed or go kayaking (it lasts for a few days and then moves on so not a big deal).  
     	
     	
-        I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!</tw-passagedata><tw-passagedata pid="75" name="Begin" tags="" position="525,75" size="100,100">&lt;h1&gt;INTRODUCTION&lt;/h1&gt;
-
+        I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!</tw-passagedata><tw-passagedata pid="75" name="Begin" tags="" position="800,75" size="100,100">&lt;h1&gt;INTRODUCTION&lt;/h1&gt;
 This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself. Thousands have healed themselves with just this //basic information// and you can too. The book offers a natural and safe self-healing approach for chronic pain, requiring nothing more than YOU.
 
 It&#39;s also free so that you can focus on healing yourself and come back to it as often as you need. Please share it freely with anyone else that could gain from this knowledge.
@@ -1681,15 +1678,9 @@ It can also be used to save or load your reading position.
 
 On a mobile device, the sidebar might need to be expanded using the arrow on the top left.
 
-Like learning to ride a bicycle 🚴‍🚴‍♀️🚴‍♂️, you cannot just read about how to ride, but you must get on the bicicyle several times to be able to learn to ride it. The same for learning how to swim 🏊‍♂️🏊‍♀️🏊‍♂️. You must splash around and try things for quite a bit before you can learn how to swim, no matter how much you read about it.
+[[Continue-&gt;Begin2]] 
 
-So plan to set aside a couple of hours to fully engage in the experiences described in this book and then time for a daily practice to master the techniques.
 
-[[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Book Dedication&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
-
-I wish you an insightful and transforming read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
-
-[[BUT WAIT! Lets make sure you are a good fit for this book-&gt;SheldonTinman]] 
 
 
 </tw-passagedata><tw-passagedata pid="76" name="More mind body phrases" tags="" position="1050,1950" size="100,100">Here are at least 100 phrases in the english language referring to the mind body connection. This list further highlights that the parts of the brain that feel emotions and physical pain overlap.
@@ -1835,7 +1826,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v1.9&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.0&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1881,7 +1872,8 @@ There is no rule to this. The same emotion may come up. A new one may come up. A
 
 [[Let&#39;s create this into screen by screen easy to follow steps]]
 </tw-passagedata><tw-passagedata pid="83" name="Contact Me" tags="" position="125,750" size="100,100">You can contact me via the [[feedback form-&gt;Feedback]].
-You can leave comments and your email address and I will reply to you directly.</tw-passagedata><tw-passagedata pid="84" name="SheldonTinman" tags="" position="350,150" size="100,100">Before we begin, are you sure you want to read this book? 
+You can leave comments and your email address and I will reply to you directly.</tw-passagedata><tw-passagedata pid="84" name="SheldonTinman" tags="" position="350,150" size="100,100">&lt;h1&gt;But wait!&lt;/h1&gt;
+Before we begin, are you sure you want to read this book? 
 The consequence of reading this book will help you become pain free but you may have a different experience of life after this. Watch this clip from the series &quot;The Big Bang Theory&quot; and decide if you really want to continue?
 &lt;style&gt;
   .responsive-video {
@@ -1894,7 +1886,17 @@ The consequence of reading this book will help you become pain free but you may 
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-[[YES despite this video, I really want to get better!-&gt;Are you suffering from chronic pain]]
+[[YES despite watching this video, I really want to get better!-&gt;Are you suffering from chronic pain]]
+</tw-passagedata><tw-passagedata pid="85" name="Begin2" tags="" position="600,75" size="100,100">&lt;h1&gt;Engage&lt;/h1&gt;
+Like learning to ride a bicycle 🚴‍🚴‍♀️🚴‍♂️, you cannot just read about how to ride, but you must get on the bicicyle several times to be able to learn to ride it. The same for learning how to swim 🏊‍♂️🏊‍♀️🏊‍♂️. You must splash around and try things for quite a bit before you can learn how to swim, no matter how much you read about it.
+
+So plan to set aside a couple of hours to fully engage in the experiences described in this book and then time for a daily practice to master the techniques.
+
+[[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Book Dedication&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
+
+I wish you an insightful and transforming read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
+
+[[Continue-&gt;SheldonTinman]] 
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
