--- a/index.html
+++ b/index.html
@@ -276,24 +276,28 @@ window.trackDecision = function(decisionLabel) {
     }
 };
 
-</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Are you suffering from chronic pain" tags="" position="300,300" size="100,100">Excellent. Let&#39;s begin. Are you suffering from chronic pain?
+</script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Are you suffering from chronic pain" tags="" position="300,300" size="100,100">&lt;h1&gt;Chronic Pain&lt;/h1&gt;
+Excellent. Let&#39;s begin. Are you suffering from chronic pain?
 
 [[Yes-&gt;I suffer from chronic pain]]
 
-[[No-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="2" name="I suffer from chronic pain" tags="" position="475,275" size="100,100">Have you had this pain for more than six months?
+[[No-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="2" name="I suffer from chronic pain" tags="" position="475,275" size="100,100">&lt;h1&gt;Length of time&lt;/h1&gt;
+Have you had this pain for more than six months?
 
 [[Yes-&gt;Pain longer than six months]]
 
 [[No-&gt;Pain less than six months]]
 </tw-passagedata><tw-passagedata pid="3" name="Stop" tags="" position="925,800" size="100,100">I&#39;m sorry, this program does not seem applicable for you yet.
 
-If you wish to return to the previous page, press the back button on the sidebar. </tw-passagedata><tw-passagedata pid="4" name="Pain longer than six months" tags="" position="700,225" size="100,100">Have you seen a licensed medical doctor about this pain?
+If you wish to return to the previous page, press the back button on the sidebar. </tw-passagedata><tw-passagedata pid="4" name="Pain longer than six months" tags="" position="700,225" size="100,100">&lt;h1&gt;Medical Doctor&lt;/h1&gt;
+Have you seen a licensed medical doctor about this pain?
 
 [[Yes-&gt;I have seen a doctor]]
 
 [[No-&gt;I have not not seen a doctor]]</tw-passagedata><tw-passagedata pid="5" name="Pain less than six months" tags="" position="400,475" size="100,100">Our body generally needs about 3 to 6 months to physically heal. Given that your pain is less than six months, I recommend that you do not take this program and allow your body to heal.
 
-[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="6" name="I have seen a doctor" tags="" position="875,200" size="100,100">Is your diagnosis life threatening?
+[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="6" name="I have seen a doctor" tags="" position="875,200" size="100,100">&lt;h1&gt;Life Threatening&lt;/h1&gt;
+Is your diagnosis life threatening?
 
 [[Yes-&gt;Diagnosis is life threatening]]
 
@@ -1826,7 +1830,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.0&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.1&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
