--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ window.trackDecision = function(decisionLabel) {
 };
 
 </script><tw-tag name="Recap" color="green"></tw-tag><tw-tag name="Emotions-table" color="red"></tw-tag><tw-tag name="List-of-diagnosis" color="orange"></tw-tag><tw-tag name="Personality-traits" color="blue"></tw-tag><tw-tag name="Stressors-list" color="purple"></tw-tag><tw-tag name="A-list-of-things" color="orange"></tw-tag><tw-passagedata pid="1" name="Are you suffering from chronic pain" tags="" position="300,300" size="100,100">&lt;h1&gt;Chronic Pain&lt;/h1&gt;
-Excellent. Let&#39;s begin. Are you suffering from chronic pain?
+Let&#39;s begin. Are you suffering from chronic pain?
 
 [[Yes-&gt;I suffer from chronic pain]]
 
@@ -296,7 +296,7 @@ Have you seen a licensed medical doctor about this pain?
 
 [[No-&gt;I have not not seen a doctor]]</tw-passagedata><tw-passagedata pid="5" name="Pain less than six months" tags="" position="400,475" size="100,100">Our body generally needs about 3 to 6 months to physically heal. Given that your pain is less than six months, I recommend that you do not take this program and allow your body to heal.
 
-[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="6" name="I have seen a doctor" tags="" position="875,200" size="100,100">&lt;h1&gt;Life Threatening&lt;/h1&gt;
+[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="6" name="I have seen a doctor" tags="" position="875,200" size="100,100">&lt;h1&gt;Life Threatening?&lt;/h1&gt;
 Is your diagnosis life threatening?
 
 [[Yes-&gt;Diagnosis is life threatening]]
@@ -305,7 +305,8 @@ Is your diagnosis life threatening?
 
 [[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="8" name="Diagnosis is life threatening" tags="" position="750,600" size="100,100">I do not recommend you take this program if your diagnosis is life-threatening. I recommend you follow the advice of your doctor to do whatever you need to do to come to a stable state.
 
-[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="9" name="My diagnosis is not life threatening" tags="A-list-of-things" position="1050,175" size="100,100">Is your pain diagnosis in one of the following locations?
+[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="9" name="My diagnosis is not life threatening" tags="A-list-of-things" position="1050,175" size="100,100">&lt;h1&gt;Pain Location&lt;/h1&gt;
+Is your pain diagnosis in one of the following locations?
 
 &lt;ul&gt;
   &lt;li&gt;Back&lt;/li&gt;
@@ -319,7 +320,8 @@ Is your diagnosis life threatening?
 &lt;/ul&gt;
 [[Yes it is one of these]]
 
-[[No it is not one of these-&gt;It is not one these diagnoses]] </tw-passagedata><tw-passagedata pid="10" name="Short exit" tags="" position="325,650" size="100,100">I thank you for trying out this program, even though it doesn&#39;t seem like it is relevant for you. I wish you a speedy recovery.</tw-passagedata><tw-passagedata pid="11" name="Yes it is one of these" tags="" position="1250,175" size="100,100">Are you open to the possibility that your chronic pain originates from stress and tension in your life?
+[[No it is not one of these-&gt;It is not one these diagnoses]] </tw-passagedata><tw-passagedata pid="10" name="Short exit" tags="" position="325,650" size="100,100">I thank you for trying out this program, even though it doesn&#39;t seem like it is relevant for you. I wish you a speedy recovery.</tw-passagedata><tw-passagedata pid="11" name="Yes it is one of these" tags="" position="1250,175" size="100,100">&lt;h1&gt;Stress and Tension&lt;/h1&gt;
+Are you open to the possibility that your chronic pain originates from stress and tension in your life?
 
 [[Absolutely yes-&gt;I am convinced my pain originates from stress and tension]]
 
@@ -330,9 +332,7 @@ Is your diagnosis life threatening?
 </tw-passagedata><tw-passagedata pid="12" name="I am convinced my pain originates from stress and tension" tags="" position="1400,150" size="100,100">It is good that you are convinced that your pain originates from stress and tension.
 However, given that you reading this book, it means you still have some work to do to lock in this information.
 
-[[Let&#39;s continue-&gt;Have you tried any of these?]]
-
-</tw-passagedata><tw-passagedata pid="13" name="It is not one these diagnoses" tags="" position="875,450" size="100,100">I&#39;m sorry that I did not cover your diagnosis. 
+[[Let&#39;s continue-&gt;Have you tried any of these?]]</tw-passagedata><tw-passagedata pid="13" name="It is not one these diagnoses" tags="" position="875,450" size="100,100">I&#39;m sorry that I did not cover your diagnosis. 
 I listed the common diagnoses for chronic pain.
 There are countless diagnoses that are related to a mind body problem and it would be impossible to list them all here.
 
@@ -350,7 +350,8 @@ Are you open minded to new possibilities?
 </tw-passagedata><tw-passagedata pid="15" name="Yes I am open to new possibilities" tags="" position="1025,625" size="100,100">It&#39;s good you are open to new possibilities. 
 With this mindset you will heal yourself faster.
 
-[[Let&#39;s continue-&gt;Have you tried any of these?]] </tw-passagedata><tw-passagedata pid="16" name="Have you tried any of these?" tags="A-list-of-things" position="1375,325" size="100,100">Have you tried at least one of these to heal yourself?
+[[Let&#39;s continue-&gt;Have you tried any of these?]] </tw-passagedata><tw-passagedata pid="16" name="Have you tried any of these?" tags="A-list-of-things" position="1375,325" size="100,100">&lt;h1&gt;Modalities&lt;/h1&gt;
+Have you tried at least one of these to heal yourself?
 
 &lt;ul&gt;
   &lt;li&gt;Drugs&lt;/li&gt;
@@ -368,7 +369,8 @@ With this mindset you will heal yourself faster.
 [[Yes I have tried at least one of these]]
 
 [[What I have tried is not listed]]
-</tw-passagedata><tw-passagedata pid="17" name="Yes I have tried at least one of these" tags="" position="1575,150" size="100,100">Given that you&#39;ve tried at least one method to alleviate your pain, I&#39;m presuming that it didn&#39;t work and you are still here seeking a solution.
+</tw-passagedata><tw-passagedata pid="17" name="Yes I have tried at least one of these" tags="" position="1575,150" size="100,100">&lt;h1&gt;Understanding or Solution?&lt;/h1&gt;
+Given that you&#39;ve tried at least one method to alleviate your pain, I&#39;m presuming that it didn&#39;t work and you are still here seeking a solution.
 
 With that in mind, let me ask a fundamental question.
 
@@ -1830,7 +1832,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.1&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.2&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
