--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@ Is your diagnosis life threatening?
 
 [[Yes-&gt;Diagnosis is life threatening]]
 
-[[No-&gt;My diagnosis is not life threatening]]</tw-passagedata><tw-passagedata pid="7" name="I have not not seen a doctor" tags="" position="550,450" size="100,100">I do not recommend that you take this program unless you have a diagnosis from a doctor. There are several diseases that are not mind-body related. 
+[[No-&gt;My diagnosis is not life threatening]]</tw-passagedata><tw-passagedata pid="7" name="I have not not seen a doctor" tags="" position="600,425" size="100,100">&lt;h1&gt;Please see a medical doctor&lt;/h1&gt;
+I do not recommend that you take this program unless you have a diagnosis from a doctor. There are several diseases that are not mind-body related. 
 
 [[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="8" name="Diagnosis is life threatening" tags="" position="750,600" size="100,100">I do not recommend you take this program if your diagnosis is life-threatening. I recommend you follow the advice of your doctor to do whatever you need to do to come to a stable state.
 
@@ -320,7 +321,8 @@ Is your pain diagnosis in one of the following locations?
 &lt;/ul&gt;
 [[Yes it is one of these]]
 
-[[No it is not one of these-&gt;It is not one these diagnoses]] </tw-passagedata><tw-passagedata pid="10" name="Short exit" tags="" position="325,650" size="100,100">I thank you for trying out this program, even though it doesn&#39;t seem like it is relevant for you. I wish you a speedy recovery.</tw-passagedata><tw-passagedata pid="11" name="Yes it is one of these" tags="" position="1250,175" size="100,100">&lt;h1&gt;Stress and Tension&lt;/h1&gt;
+[[No it is not one of these-&gt;It is not one these diagnoses]] </tw-passagedata><tw-passagedata pid="10" name="Short exit" tags="" position="325,650" size="100,100">&lt;h1&gt;Wishing you the best&lt;/h1&gt;
+I thank you for trying out this program, even though it doesn&#39;t seem like it is relevant for you. I wish you a speedy recovery.</tw-passagedata><tw-passagedata pid="11" name="Yes it is one of these" tags="" position="1250,175" size="100,100">&lt;h1&gt;Stress and Tension&lt;/h1&gt;
 Are you open to the possibility that your chronic pain originates from stress and tension in your life?
 
 [[Absolutely yes-&gt;I am convinced my pain originates from stress and tension]]
@@ -369,7 +371,7 @@ Have you tried at least one of these to heal yourself?
 [[Yes I have tried at least one of these]]
 
 [[What I have tried is not listed]]
-</tw-passagedata><tw-passagedata pid="17" name="Yes I have tried at least one of these" tags="" position="1575,150" size="100,100">&lt;h1&gt;Understanding or Solution?&lt;/h1&gt;
+</tw-passagedata><tw-passagedata pid="17" name="Yes I have tried at least one of these" tags="" position="1575,150" size="100,100">&lt;h1&gt;Understanding or Solution&lt;/h1&gt;
 Given that you&#39;ve tried at least one method to alleviate your pain, I&#39;m presuming that it didn&#39;t work and you are still here seeking a solution.
 
 With that in mind, let me ask a fundamental question.
@@ -384,7 +386,8 @@ Is understanding what is causing the pain more important to you, or doing the so
 </tw-passagedata><tw-passagedata pid="18" name="What I have tried is not listed" tags="" position="1375,500" size="100,100">I&#39;m sorry I didn&#39;t list something you have tried.
 Please let me know and I can consider adding it to a revision of this book.
 
-[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="19" name="Understanding the cause of the pain is more important" tags="" position="1550,325" size="100,100">Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important 
+[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="19" name="Understanding the cause of the pain is more important" tags="" position="1550,325" size="100,100">&lt;h1&gt;Gravity&lt;/h1&gt;
+Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important 
 
 Consider this analogy: most of us don&#39;t fully grasp the meaning of life, how we came to exist, or the essence of existence itself.  Yet we thrive and enjoy our existence without knowing precisely how we came to be.
 
@@ -409,7 +412,8 @@ So will you now make a decision:
 [[I cannot apply the solution without understanding why I&#39;m in pain-&gt;Stop]]
 
 
-</tw-passagedata><tw-passagedata pid="20" name="I am willing to do the solution without understanding the cause" tags="" position="1625,500" size="100,100">Excellent. 
+</tw-passagedata><tw-passagedata pid="20" name="I am willing to do the solution without understanding the cause" tags="" position="1625,500" size="100,100">&lt;h1&gt;Basic Understanding&lt;/h1&gt;
+Excellent. 
 
 This is the place to be for the fastest healing. I&#39;m glad you are coming with the mindset to do the solution without fully understanding the cause. This is your first step towards healing that many fail to take.
 
@@ -1832,7 +1836,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.2&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.3&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
