--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ Have you seen a licensed medical doctor about this pain?
 
 [[No-&gt;I have not not seen a doctor]]</tw-passagedata><tw-passagedata pid="5" name="Pain less than six months" tags="" position="400,475" size="100,100">Our body generally needs about 3 to 6 months to physically heal. Given that your pain is less than six months, I recommend that you do not take this program and allow your body to heal.
 
-[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="6" name="I have seen a doctor" tags="" position="875,200" size="100,100">&lt;h1&gt;Life Threatening?&lt;/h1&gt;
+[[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="6" name="I have seen a doctor" tags="" position="875,200" size="100,100">&lt;h1&gt;Life Threatening&lt;/h1&gt;
 Is your diagnosis life threatening?
 
 [[Yes-&gt;Diagnosis is life threatening]]
@@ -387,23 +387,15 @@ Is understanding what is causing the pain more important to you, or doing the so
 Please let me know and I can consider adding it to a revision of this book.
 
 [[Exit-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="19" name="Understanding the cause of the pain is more important" tags="" position="1550,325" size="100,100">&lt;h1&gt;Gravity&lt;/h1&gt;
-Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important 
+Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important. Consider this analogy: most of us don&#39;t fully grasp the meaning of life, how we came to exist, or the essence of existence itself.  Yet we thrive and enjoy our existence without knowing precisely how we came to be.
 
-Consider this analogy: most of us don&#39;t fully grasp the meaning of life, how we came to exist, or the essence of existence itself.  Yet we thrive and enjoy our existence without knowing precisely how we came to be.
-
-Does our lack of understanding prevent us from living?
-
-Of course not!  We can still live and thrive and enjoy life without really knowing HOW we came to be.
-
-In the same way, understanding the cause of the pain is secondary. Doing the solution is the most important thing.
+Does our lack of understanding prevent us from living? Of course not!  We can still live and thrive and enjoy life without really knowing HOW we came to be. In the same way, understanding the cause of the pain is secondary. Doing the solution is the most important thing.
 
 You may ask why?
 
-The honest answer from me is that the cause of the pain is still up in the air. There are many theories, but the good news is, it is completely unimportant to understand the reason why, the most important thing is to do DO THE SOLUTION. 
+The honest answer from me is that the cause of the pain is still up in the air. There are many theories, but the good news is, it is completely unimportant to understand the reason why, the most important thing is to do DO THE SOLUTION.  What I can tell you for sure is that the SOLUTION WORKS. 1000&#39;s have healed themselved using the solution.
 
-What I can tell you for sure is that the SOLUTION WORKS. 1000&#39;s have healed themselved using the solution.
-
-It&#39;s like gravity. We still don&#39;t understand gravity. But we know that we can catch that baseball or drop a coin - we know the solution without knowing how gravity is working.
+It&#39;s like gravity. We still don&#39;t understand gravity. But we know that we can jump, catch a baseball or drop a coin - we know how to do the solution without knowing how gravity is working.
 
 So will you now make a decision:
 
