--- a/index.html
+++ b/index.html
@@ -1819,7 +1819,8 @@ Please use the back button in the top left toolbar to return to your previous pa
 </tw-passagedata><tw-passagedata pid="77" name="StoryMenu" tags="" position="350,825" size="100,100">[[Testimonials]] 
 [[Feedback]]
 [[Contact Me]]
-[[Emotional Meditation-&gt;Tell me about the emotional meditation]]</tw-passagedata><tw-passagedata pid="78" name="Feedback" tags="" position="550,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
+[[Emotional Meditation-&gt;PreEmotionalMeditation]]
+</tw-passagedata><tw-passagedata pid="78" name="Feedback" tags="" position="550,775" size="100,100">[[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 
 [[No I have not read the whole book but I&#39;m ready to give my feedback anyway|Yes I have read the whole book and I&#39;m ready to give my feedback]]
 </tw-passagedata><tw-passagedata pid="79" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="375,950" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="80" name="Testimonials" tags="" position="200,475" size="100,100">       The best thing about your program for me is the emotion meditation. It 100% keeps me out of story telling mode, so this is the first time I&#39;ve actually grasped how to feel emotions without thinking about them. 		
@@ -1830,7 +1831,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.4&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.5&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1901,6 +1902,12 @@ So plan to set aside a couple of hours to fully engage in the experiences descri
 I wish you an insightful and transforming read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
 [[Continue-&gt;SheldonTinman]] 
+</tw-passagedata><tw-passagedata pid="86" name="PreEmotionalMeditation" tags="" position="175,900" size="100,100">&lt;h1&gt;Are You Ready?&lt;/h1&gt;
+Please only proceed to the Emotional Meditation if you have already read the book in sequence. This link is intended for quick access to the Emotional Meditation after you have completed the book.
+
+[[Yes I have already read the book in sequence-&gt;Tell me about the emotional meditation]] 
+
+Otherwise, please press the back arrow in the top left of the menu to return to your location in the book because reading the book in sequence will make the emotional meditation much more powerful.
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
